<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvPart"
        android:layout_marginTop="50dp"
        android:textSize="32dp"
        android:text="Шаг 4/4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="16dp"
        android:textColor="@color/colorBtn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

    <EditText
        android:id="@+id/editNameParent"
        style="@style/myCustomEditText"
        android:layout_below="@+id/app_bar"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enterNameParent"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editEmailParent"
        style="@style/myCustomEditText"
        android:layout_below="@+id/editNameParent"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enterEmailParent"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/editPhoneParent"
        style="@style/myCustomEditText"
        android:layout_below="@+id/editEmailParent"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enterEmailParent"
        android:inputType="phone"/>


    <Spinner
        android:id="@+id/spParent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        style="@style/myCustomEditText"
        android:entries="@array/parent"
        android:layout_below="@+id/editPhoneParent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editLogin"
        style="@style/myCustomEditText"
        android:layout_below="@+id/spParent"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editLogin"
        android:inputType="textPersonName"/>


    <EditText
        android:id="@+id/editPass"
        style="@style/myCustomEditText"
        android:layout_below="@+id/editLogin"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editPass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editPassRepeat"
        style="@style/myCustomEditText"
        android:layout_below="@+id/editPass"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/editPassRepeat"
        android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btnFinish"
        style="@style/myCustomButton"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/finishButton"
        android:focusable="false"/>




</RelativeLayout>

