<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvPart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="16dp"
        android:layout_marginTop="50dp"
        android:textSize="32dp"
        android:text="Шаг 1/4"
        android:textColor="@color/colorBtn"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="match_parent"
        style="@style/myCustomTextViewRegularBlack"
        android:layout_above="@+id/tvResetPass"
        android:text="@string/choose" />


    <Button
        android:id="@+id/btnKinderGarden"
        style="@style/myCustomButton"
        android:layout_marginTop="5dp"
        android:focusable="false"
        android:layout_below="@+id/tvChoose"
        android:paddingLeft="5dp"
        android:paddingRight="35dp"
        android:drawableLeft="@drawable/kinder_garden_reg"
        android:text="@string/kinderGarden" />

    <Button
        style="@style/myCustomButton"
        android:layout_below="@+id/btnKinderGarden"
        android:text="@string/parent"
        android:drawableLeft="@drawable/parent_reg"
        android:id="@+id/btnParent"
        android:paddingLeft="5dp"
        android:paddingRight="35dp"
        android:focusable="false"/>

</LinearLayout>
    <TextView
        android:id="@+id/tvPrivacyPolicy"
        android:layout_width="match_parent"
        style="@style/myCustomTextViewRegularBlack"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/privacyPolicy" />



</RelativeLayout>

