<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvSelect"
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:gravity="left"
        android:paddingLeft="16dp"
        style="@style/myCustomTextViewRegularBlack"
        android:layout_above="@+id/tvResetPass"
        android:text="@string/selectImgKG" />

    <ImageView
        android:id="@+id/addImageKinderGarden"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="centerCrop"
        android:layout_below="@+id/tvSelect"
        android:src="@drawable/ic_launcher_background" />


    <Spinner
        android:id="@+id/spReg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        style="@style/myCustomEditText"
        android:entries="@array/regions"
        android:layout_below="@+id/addImageKinderGarden"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spMKR"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        style="@style/myCustomEditText"
        android:entries="@array/AlmatyCity"
        android:layout_below="@+id/spReg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editName"
        style="@style/myCustomEditText"
        android:layout_below="@+id/spMKR"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/nameKG"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editAdress"
        style="@style/myCustomEditText"
        android:layout_below="@+id/editName"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/adress"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnNext"
        style="@style/myCustomButton"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/nextButton"
        android:focusable="false"/>




</RelativeLayout>

