<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/tvPart"
        android:layout_marginTop="50dp"
        android:textSize="32dp"
        android:text="Шаг 3/4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingRight="16dp"
        android:textColor="@color/colorBtn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_centerVertical="true"
        android:orientation="vertical">

    <TextView
        android:id="@+id/tvSelect"
        android:layout_below="@+id/app_bar"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_marginTop="10dp"
        android:paddingLeft="16dp"
        style="@style/myCustomTextViewRegularBlack"
        android:layout_above="@+id/tvResetPass"
        android:text="@string/selectImgChild" />

    <ImageView
        android:id="@+id/addImageChild"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:scaleType="centerCrop"
        android:layout_below="@+id/tvSelect"
        android:src="@drawable/ic_launcher_background" />


    <EditText
        android:id="@+id/editNameChild"
        style="@style/myCustomEditText"
        android:layout_below="@+id/addImageChild"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/enterNameChild"
        android:inputType="textPersonName"/>

    <Spinner
        android:id="@+id/spGender"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        style="@style/myCustomEditText"
        android:entries="@array/gender"
        android:layout_below="@+id/editNameChild"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/birthdayChild"
        style="@style/myCustomEditText"
        android:text="@string/date"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/spGender"/>
    </LinearLayout>




    <Button
        android:id="@+id/btnNext"
        style="@style/myCustomButton"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:text="@string/nextButton"
        android:focusable="false"/>




</RelativeLayout>

